Mirrored UV have bad tangent space #53750

Closed
opened 2018-01-10 10:10:57 +01:00 by Clément Foucault · 18 comments

Mirrored UVs produce bad normal map output. This is due to tangent calculation/upload to GPU.

Even more strange is the fact that building without cycles gives a different result.

mirro_normalmap_bug.blend

28_without_asan_with_cycles.png 2.8 With Cycles (only left half is correct (switch to cycles to see correct result)

28_with_asan_without_cycles.png 2.8 Without Cycles (seems completly inverted)

This was with debug build by the way.

Mirrored UVs produce bad normal map output. This is due to tangent calculation/upload to GPU. Even more strange is the fact that building without cycles gives a different result. [mirro_normalmap_bug.blend](https://archive.blender.org/developer/F1777389/mirro_normalmap_bug.blend) ![28_without_asan_with_cycles.png](https://archive.blender.org/developer/F1777394/28_without_asan_with_cycles.png) 2.8 With Cycles (only left half is correct (switch to cycles to see correct result) ![28_with_asan_without_cycles.png](https://archive.blender.org/developer/F1777396/28_with_asan_without_cycles.png) 2.8 Without Cycles (seems completly inverted) This was with debug build by the way.
Campbell Barton was assigned by Clément Foucault 2018-01-10 10:10:57 +01:00
Author
Member

Added subscriber: @fclem

Added subscriber: @fclem

#57692 was marked as duplicate of this issue

#57692 was marked as duplicate of this issue

#57021 was marked as duplicate of this issue

#57021 was marked as duplicate of this issue

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

The mirrored UV's are a copy in this case - not a continuous unwrap, so there are seams.

The difference without cycles is it's using Blender-Internal rendering engine. Which uses flipped tangents.
(double checked and this is the case for 2.79).

So there is no bug here as far as I can see.

The mirrored UV's are a copy in this case - not a continuous unwrap, so there are seams. The difference without cycles is it's using Blender-Internal rendering engine. Which uses flipped tangents. (double checked and this is the case for 2.79). So there is no bug here as far as I can see.
Author
Member

My bad the description is not good.

I should have stated that the screenshot "2.8 with cycles" is faulty. If you compare it to the cycles rendered results.

The problem is not the seam but the tangent direction.

This is the expected result.
cycle.png

My bad the description is not good. I should have stated that the screenshot "2.8 with cycles" is faulty. If you compare it to the cycles rendered results. The problem is not the seam but the tangent direction. This is the expected result. ![cycle.png](https://archive.blender.org/developer/F1778159/cycle.png)
Author
Member

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Added subscriber: @moisessalvador

Added subscriber: @moisessalvador

Added subscriber: @KillerKick

Added subscriber: @KillerKick

Added subscriber: @ostapblender

Added subscriber: @ostapblender

Added subscriber: @Veezen

Added subscriber: @Veezen

I have similar problem and I posted this problem on Blenderartists.

In short: every mirrored UV island with baked normal maps doesn't work in Eevee.

https://blenderartists.org/t/normal-map-in-eevee-have-big-problems-mirrored-uv-islands/1130183

I have similar problem and I posted this problem on Blenderartists. In short: every mirrored UV island with baked normal maps doesn't work in Eevee. https://blenderartists.org/t/normal-map-in-eevee-have-big-problems-mirrored-uv-islands/1130183

Consider having this ready for the beta milestone

Consider having this ready for the beta milestone

this is how the mirrored uvs show in eevee

eevee.PNG

this is how they look in cycles

cycles.PNG

just wanted to know if there's a way to fix it in eevee

this is how the mirrored uvs show in eevee ![eevee.PNG](https://archive.blender.org/developer/F5436677/eevee.PNG) this is how they look in cycles ![cycles.PNG](https://archive.blender.org/developer/F5436678/cycles.PNG) just wanted to know if there's a way to fix it in eevee

Added subscriber: @mikhluz

Added subscriber: @mikhluz

This issue was referenced by 735ad525a6

This issue was referenced by 735ad525a6e72a7a52bf4e81ca03a7b1c435a857
Author
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @youthatninja

Added subscriber: @youthatninja
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53750
No description provided.