Fix T53750: Mirrored UV have bad tangent space

I feel silly because it was my fault all along! (see the WATCH IT warning)